versioned_docs/version-1.0.6/index.mdx
---
description: Utiliser le SDK de Sline
title: SDK Sline
---

export const CartExample = () => {
    return (
        <div className="text-center">
            <table className="table raw text-left" id="cart">
                <thead>
                    <tr>
                    <th scope="col" className="bg-light col-4 col-md-7">
                        <div className="p-2 px-3 text-uppercase">Produit</div>
                    </th>
                    <th scope="col" className="bg-light col-4 col-md-3">
                        <div className="py-2 text-uppercase">Prix de vente</div>
                    </th>
                    <th scope="col" className="bg-light col-4col-md-3">
                        <div className="py-2 text-uppercase">Quantité</div>
                    </th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <th scope="row">
                            <div className="p-2">
                            <img src="https://media.ldlc.com/r1600/ld/products/00/05/88/64/LD0005886472_1_0005927794.jpg" alt="" width="70" className="img-fluid rounded shadow-sm" />
                            <div className="ml-3 d-inline-block align-middle">
                                <h5 className="mb-0"> <a href="#" className="text-dark d-inline-block align-middle">iPhone 13 Pro Bleu 128 Go</a></h5>
                            </div>
                            </div>
                        </th>
                        <td className="align-middle"><strong>1 159.00 €</strong></td>
                        <td className="align-middle col-md-3">
                            <div className="input-group mb-2">
                            <div className="input-group-prepend">
                                <button className="btn btn-dark" id="qtyminus" type="button">&minus;</button>
                            </div>
                            <input type="number" className="form-control" name="sku-iphone13bleu2" id="qty" min="1" max="10" step="1" defaultValue="2" />
                            <div className="input-group-append">
                                <button className="btn btn-dark" id="qtyplus" type="button">+</button>
                            </div>
                            </div>
                        </td>
                    </tr>
                    <tr>
                        <th scope="row">
                            <div className="p-2">
                            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Nintendo_Switch_Console.png" alt="" width="70" className="img-fluid rounded shadow-sm" />
                            <div className="ml-3 d-inline-block align-middle">
                                <h5 className="mb-0"><a href="#" className="text-dark d-inline-block">Nintendo Switch</a></h5>
                            </div>
                            </div>
                        </th>
                        <td className="align-middle"><strong>229.00 €</strong></td>
                        <td className="align-middle col-md-3">
                            <div className="input-group mb-2">
                            <div className="input-group-prepend">
                                <button className="btn btn-dark" id="qtyminus2" type="button">&minus;</button>
                            </div>
                            <input type="number" className="form-control" name="nintendoswitch" id="qty2" min="1" max="10" step="1" defaultValue="1" />
                            <div className="input-group-append">
                                <button className="btn btn-dark" id="qtyplus2" type="button">+</button>
                            </div>
                            </div>
                        </td>
                    </tr>
                </tbody>
            </table>
            <div id="period-selector"/>
            <a href="#" id="rent-btn" className="btn btn-dark rounded-pill px-4">Louer</a>
        </div>
    );
}

## Installation

Rajoutez la balise suivante à la fin de la section &lt;head&gt; de votre page:
```html
<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/sline-io/web-sdk@1/sline-sdk.min.js"></script>
```

## Initialisation
A la fin de votre &lt;body&gt;, ajoutez la ligne suivante:
```html
<script type="text/javascript">
    Sline.Initialize(retailerId, liveMode);
</script>
```

## Configuration
Voici les différentes options disponibles:

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| retailerId | String | Identifiant du marchand | Oui |
| liveMode | Boolean | Mettre à true si vous êtes en production, sinon à false | Oui |

## Méthodes
Voici les différentes méthodes disponibles via le SDK:

### Initialize
Initialize doit être la première méthode que vous appelez pour configurer le SDK
```js
Sline.Initialize(retailerId, liveMode)
```

### ResetCart
ResetCart permet de vider complètement le panier actuel
```js
Sline.ResetCart()
```

### AddCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.AddCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### UpdateCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.UpdateCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### RequestCheckoutURL
Génère l'URL de checkout et redirige vers cette page
```js
Sline.RequestCheckoutURL(elementId, title);
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| elementId | String | ID du bouton déclencheur | Oui |
| title | String | Texte qui sera injecté dans le bouton, en préfixe de "X€/mois".<br/>Valeur par défaut: "Louer à partir de " | Non |

## Example
<CartExample />