versioned_docs/version-2.1.0/index.mdx
---
description: Utiliser le SDK de Sline
title: SDK Sline
---

export const CartExample = () => {
    return (
        <div className="text-center">
            <table className="table raw text-left" id="cartv210">
                <thead>
                    <tr>
                        <th scope="col" className="bg-light col-4">
                            <div className="p-2 px-3 text-uppercase">Produit</div>
                        </th>
                        <th scope="col" className="bg-light col-2">
                            <div className="py-2 text-uppercase">Prix de vente</div>
                        </th>
                        <th scope="col" className="bg-light col-2">
                            <div className="py-2 text-uppercase">Mensualité</div>
                        </th>
                        <th scope="col" className="bg-light col-2">
                            <div className="py-2 text-uppercase">Quantité</div>
                        </th>
                        <th scope="col" className="bg-light col-2">
                            <div className="py-2 text-uppercase">Total</div>
                        </th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <th scope="row">
                            <div className="p-2">
                            <img src="https://media.ldlc.com/r1600/ld/products/00/05/88/64/LD0005886472_1_0005927794.jpg" alt="" width="70" className="img-fluid rounded shadow-sm" />
                            <div className="ml-3 d-inline-block align-middle">
                                <h5 className="mb-0"> <a href="#" className="text-dark d-inline-block align-middle">iPhone 13 Pro Bleu 128 Go</a></h5>
                            </div>
                            </div>
                        </th>
                        <td className="align-middle"><strong>1 159.00 €</strong></td>
                        <td className="align-middle"></td>
                        <td className="align-middle">
                            <div className="input-group mb-2">
                            <div className="input-group-prepend">
                                <button className="btn btn-dark" id="qtyminus" type="button">&minus;</button>
                            </div>
                            <input type="number" className="form-control" name="sku-iphone13bleu2" id="qty" min="1" max="10" step="1" defaultValue="2" />
                            <div className="input-group-append">
                                <button className="btn btn-dark" id="qtyplus" type="button">+</button>
                            </div>
                            </div>
                        </td>
                        <td className="align-middle"></td>
                    </tr>
                    <tr>
                        <th scope="row">
                            <div className="p-2">
                            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Nintendo_Switch_Console.png" alt="" width="70" className="img-fluid rounded shadow-sm" />
                            <div className="ml-3 d-inline-block align-middle">
                                <h5 className="mb-0"><a href="#" className="text-dark d-inline-block">Nintendo Switch</a></h5>
                            </div>
                            </div>
                        </th>
                        <td className="align-middle"><strong>229.00 €</strong></td>
                        <td className="align-middle"></td>
                        <td className="align-middle">
                            <div className="input-group mb-2">
                            <div className="input-group-prepend">
                                <button className="btn btn-dark" id="qtyminus2" type="button">&minus;</button>
                            </div>
                            <input type="number" className="form-control" name="nintendoswitch" id="qty2" min="1" max="10" step="1" defaultValue="1" />
                            <div className="input-group-append">
                                <button className="btn btn-dark" id="qtyplus2" type="button">+</button>
                            </div>
                            </div>
                        </td>
                        <td className="align-middle"></td>
                    </tr>
                </tbody>
            </table>
            <div id="period-selector" className="text-right"/>
            <a href="#" id="rent-btn" className="btn btn-dark rounded-pill px-4">Louer</a>
        </div>
    );
}

## Installation

Rajoutez la balise suivante à la fin de la section &lt;head&gt; de votre page:
```html
<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/sline-io/web-sdk@2.1.0/sline-sdk.min.js"></script>
```

## Initialisation
A la fin de votre &lt;body&gt;, ajoutez la ligne suivante:
```html
<script type="text/javascript">
    Sline.Initialize({
        retailer: retailerId,
        production: false,
        checkoutButton: {
          id: 'rent-btn',
          prefix: 'Louer à partir de ',
          suffix: '/mois',
          events: {
            customOnClickEvent: true
          }
        },
        durationSelector: {
            id: 'period-selector'
        }
      });
</script>
```

## Configuration

### Options principales
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| retailer | String | Identifiant du marchand | Oui |
| production | Boolean | Mettre à true si vous êtes en production, sinon à false | Oui |
| checkoutButton | Object | Voir les options du [checkoutButton](#configuration-du-checkoutbutton) plus bas | Oui |
| durationSelector | Object | Voir les options du [durationSelector](#configuration-du-durationselector) plus bas | Non |

### Configuration du CheckoutButton
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| id | String | Identifiant du bouton | Oui |
| prefix | String | Texte qui apparaîtra avant le prix dans le bouton | Non |
| suffix | String | Texte qui apparaîtra après le prix dans le bouton | Non |
| events | Object | Voir la configuration des [évènements du checkoutButton](#configuration-du-checkoutbuttonevents) | Non |

### Configuration du CheckoutButton.Events
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| customOnClickEvent | Boolean | Mettre à true si vous écoutez des évènements sur le click du bouton de checkout | Non |

### Configuration du DurationSelector
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| id | String | Identifiant du selecteur de durée | Non |

## Variables accessibles

### Cart
Contient la liste des produits et les quantités associées
```js
Sline.cart: {product, quantity}[]
```

### Durations
Contient la liste des différentes durées de locations disponibles (en mois). La valeur -1 représente un location sans engagement
```js
Sline.durations: number[]
```

### Prices
Contient la liste des produits et les prix associés en fonction de la durée de location
```js
Sline.prices: Object
```
Voici un exemple de prix:
```js
{
    produit1: {
        durée1: {
            firstInstalmentPrice: {amount: 20000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 5000, currency: 'EUR'}
        },
        durée2: {
            firstInstalmentPrice: {amount: 25000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 7000, currency: 'EUR'}
        }
    }
    produit2: {
        durée1: {
            firstInstalmentPrice: {amount: 20000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 5000, currency: 'EUR'}
        },
        durée2: {
            firstInstalmentPrice: {amount: 25000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 7000, currency: 'EUR'}
        }
    }
}
```

## Méthodes
Voici les différentes méthodes disponibles via le SDK:

### Initialize
Initialize doit être la première méthode que vous appelez pour configurer le SDK
```js
Sline.Initialize(options)
```

### ResetCart
ResetCart permet de vider complètement le panier actuel
```js
Sline.ResetCart()
```

### AddCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.AddCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### UpdateCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.UpdateCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### GetPriceForProductWithDuration
Retourne le prix (formatté avec la devise) pour un produit en fonction de la durée de location et de la quantité
```js
Sline.GetPriceForProductWithDuration(item, quantity);
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| elementId | String | ID du bouton déclencheur | Oui |
| title | String | Texte qui sera injecté dans le bouton, en préfixe de "X€/mois".<br/>Valeur par défaut: "Louer à partir de " | Non |

## Example
<CartExample />